hphp/test/slow/readonly/prop_cow.php.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'Readonly collections cannot be modified.' in %s/prop_cow.php:19
%A
